<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libra</name>
  <version>0.1.0</version>
  <description>Main data processing package for the LIghtweight Balanced Robot Arm (LIBRA) project</description>
  <maintainer email="brice.c.67b9@m.isct.ac.jp">Christian Brice</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Libraries/Tools -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Interfaces -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Kinematics -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Sensors -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>lightwarelidar2</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
